# pracro-server

./: AUTHORS  Makefile.am  README.md  configure.ac  pracro.psql
centos/etc/systemd/system/: pracrod.service
doc/: debug-options.txt
etc/: Makefile.am  pracrod.conf.example
src/: .gitignore  Makefile.am  admin_connection.cc  admin_connection.h  admin_export.cc  admin_export.h  admin_rc.cc  admin_rc.h  artefact.cc  artefact.h  client_connection.cc  client_connection.h  configuration.cc  configuration.h  configurationparser.cc  configurationparser.h  connection.cc  connection.h  connectionpool.cc  connectionpool.h  courselist.cc  courselist.h  courseparser.cc  courseparser.h  daemon.cc  daemon.h  database.cc  database.h  dbtypes.h  entitylist.cc  entitylist.h  environment.cc  environment.h  exception.cc  exception.h  fieldnamescanner.cc  fieldnamescanner.h  httpd.cc  httpd.h  inotify.cc  (+84 more)
src/macrotool/: .cvsignore  Makefile.am  dump.cc  dump.h  export.cc  export.h  fieldnames.cc  fieldnames.h  filehandler.cc  filehandler.h  macrotool.cc  sunlock.cc  sunlock.h
tools/: Makefile.am  Makefile.am.test  hexify.cc  test.h
xml/: Makefile.am
xml/courses/: Makefile.am  test.xml
xml/macros/: Makefile.am  test_altcombobox.xml  test_button.xml  test_checkbox.xml  test_combobox.xml  test_dbwidget.xml  test_lineedit.xml  test_listbox.xml  test_meta.xml  test_metawidget.xml  test_multilist.xml  test_radiobuttons.xml  test_resume.xml
xml/templates/: Makefile.am  test.xml
