EXTRA_DIST = \
	test_altcombobox.xml \
	test_button.xml \
	test_checkbox.xml \
	test_combobox.xml \
	test_dbwidget.xml \
	test_lineedit.xml \
	test_listbox.xml \
	test_meta.xml \
	test_metawidget.xml \
	test_multilist.xml \
	test_radiobuttons.xml \
	test_resume.xml

xmldir = $(datadir)/xml/macros

xml_DATA = \
	test_altcombobox.xml \
	test_button.xml \
	test_checkbox.xml \
	test_combobox.xml \
	test_dbwidget.xml \
	test_lineedit.xml \
	test_listbox.xml \
	test_meta.xml \
	test_metawidget.xml \
	test_multilist.xml \
	test_radiobuttons.xml \
	test_resume.xml
